Adicionando alteracoes para teste

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.security.oauth2.client.registration.teste.authorization-grant-type=author
 #spring.security.oauth2.client.registration.studentservice.scope=StudentService-write
 spring.security.oauth2.client.provider.teste.token-uri=https://oauth.pipedrive.com/oauth/token
 spring.studentservice.endpoint=http://localhost:8080/me
+
+server.port=8000
