Adicionando alteracoes para teste

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,5 @@ spring.security.oauth2.client.registration.teste.clientSecret=0fdc47b869f38ae012
 spring.security.oauth2.client.registration.teste.authorization-grant-type=authorization_code
 #spring.security.oauth2.client.registration.studentservice.scope=StudentService-write
 spring.security.oauth2.client.provider.teste.token-uri=https://oauth.pipedrive.com/oauth/token
-spring.studentservice.endpoint=http://localhost:8080/me
-
+spring.security.oauth2.client.registration.teste.redirect-uri=http://solarz.nadic.ifrn.edu.br/teste3
 server.port=8000
